CAMBIOS PARA EDITAR SOLICITUD

--- a/ITLA_PE_MVC/Views/Solicitudes/Edit.cshtml
+++ b/ITLA_PE_MVC/Views/Solicitudes/Edit.cshtml
@@ -1,9 +1,6 @@
 ﻿@model ITLA_PE_MVC.Models.SolicitudViewModel
 @{ ViewBag.Title = "Edit"; }
 
-<h2>Edit</h2>
-
-
 
 @using (Html.BeginForm("Edit", "Solicitudes", FormMethod.Post, new { enctype = "multipart/form-data", @class = "was-validated", onsubmit = "return checkForm(this);" }))
 {
@@ -42,7 +39,7 @@
                                                 <div class="col-md-4">
                                                     <div class="form-group">
                                                         <label for="userinput4">Fecha de Nacimiento</label>
-                                                        @Html.EditorFor(model => model.Solicitud.FechaNacimiento, new { htmlAttributes = new { @type = "date", @class = "form-control is-invalid", required = "required", maxlength = "10", min = "1920-01-01", max = "2020-12-31" } })
+                                                        @Html.EditorFor(model => model.Solicitud.FechaNacimiento, new { htmlAttributes = new { @Value = Convert.ToString(Model.Solicitud.FechaNacimiento.ToShortDateString()), @class = "form-control is-invalid", required = "required", maxlength = "10", min = "1920-01-01", max = "2020-12-31" } })
                                                         @Html.ValidationMessageFor(model => model.Solicitud.FechaNacimiento, "", new { @class = "text-danger" })
                                                     </div>
                                                 </div>
@@ -192,44 +189,54 @@
                                             </div>
 
                                             <h4 class="form-section">Documentos a adjuntar</h4>
-                                            <div class="row" id="divCedula" runat="server" visible="true">
-                                                <div class="col-md-12">
-                                                    <div class="form-group">
-                                                        <label for="userinput3">
-                                                            Cédula
-                                                        </label>
+                                            @if (ViewBag.IsCedulaFile == true)
+                                            {
 
-                                                        <div class="custom-file mb-3">
-                                                            <input type="file" id="PostFile" name="PostFile" class="custom-file-input" accept="image/jpeg,image/gif,image/png,application/pdf,image/x-eps" />
-                                                            <label class="custom-file-label" for="validatedCustomFile">seleccionar archivo...</label>
-                                                            @Html.ValidationMessageFor(model => model.FilePathCedula, "", new { @class = "text-danger invalid-feedback" })
-                                                        </div>
 
-                                                    </div>
-                                                </div>
-                                            </div>
+                                                <div class="row" id="divCedula" runat="server">
+                                                    <div class="col-md-12">
+                                                        <div class="form-group">
+                                                            <label for="userinput3">
+                                                                Cédula
+                                                            </label>
 
-                                            <div class="row" id="divActa" runat="server" visible="false">
-                                                <div class="col-md-12">
-                                                    <div class="form-group">
-                                                        <label for="userinput3">
-                                                            Acta de Nacimiento
-                                                        </label>
-                                                        <div class="custom-file mb-3">
-                                                            <input type="file" class="custom-file-input" name="PostFileActa" id="PostFileActa" accept="image/jpeg,image/gif,image/png,application/pdf,image/x-eps">
-                                                            <label class="custom-file-label" for="validatedCustomFile">seleccionar archivo...</label>
-                                                            @Html.ValidationMessageFor(model => model.FilePathActa, "", new { @class = "text-danger invalid-feedback" })
+                                                            <div class="custom-file mb-3">
+                                                                <input type="file" id="PostFile" name="PostFile" class="custom-file-input" accept="image/jpeg,image/gif,image/png,application/pdf,image/x-eps" />
+                                                                <label class="custom-file-label" for="validatedCustomFile">seleccionar archivo...</label>
+                                                                @Html.ValidationMessageFor(model => model.FilePathCedula, "", new { @class = "text-danger invalid-feedback" })
+                                                            </div>
+
                                                         </div>
                                                     </div>
                                                 </div>
-                                            </div>
+                                            }
+
+                                            @if (ViewBag.IsActa == true)
+                                            {
+
+                                                <div class="row" id="divActa" runat="server" visible="false">
+                                                    <div class="col-md-12">
+                                                        <div class="form-group">
+                                                            <label for="userinput3">
+                                                                Acta de Nacimiento
+                                                            </label>
+                                                            <div class="custom-file mb-3">
+                                                                <input type="file" class="custom-file-input" name="PostFileActa" id="PostFileActa" accept="image/jpeg,image/gif,image/png,application/pdf,image/x-eps">
+                                                                <label class="custom-file-label" for="validatedCustomFile">seleccionar archivo...</label>
+                                                                @Html.ValidationMessageFor(model => model.FilePathActa, "", new { @class = "text-danger invalid-feedback" })
+                                                            </div>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            }
+
 
                                             <div class="row">
                                                 <div class="col-md-12">
                                                     <div class="form-group">
                                                         <label for="userinput3">Record de notas<asp:RequiredFieldValidator ID="RequiredFieldValidator12" runat="server" Text="*" ForeColor="Red" ErrorMessage="Imagen de tu comprobante de estudio es requerido" ControlToValidate="FileUploadComprobante"></asp:RequiredFieldValidator></label>
                                                         <div class="custom-file mb-3">
-                                                            <input type="file" id="PostFileEstudios" name="PostFileEstudios" class="custom-file-input" accept="image/jpeg,image/gif,image/png,application/pdf,image/x-eps" required />
+                                                            <input type="file" id="PostFileEstudios" name="PostFileEstudios" class="custom-file-input" accept="image/jpeg,image/gif,image/png,application/pdf,image/x-eps" />
                                                             <label class="custom-file-label" for="validatedCustomFile">seleccionar archivo...</label>
                                                             @Html.ValidationMessageFor(model => model.FilePathEstudios, "", new { @class = "text-danger invalid-feedback" })
                                                         </div>
