--- a/ITLA_PE_MVC/Views/Home/Index.cshtml
+++ b/ITLA_PE_MVC/Views/Home/Index.cshtml
@@ -15,6 +15,8 @@
 
                                     <a href="#" style="margin-top: 10px;" class="status btn btn-ghost btn-ghost-white">VER EL ESTATUS</a>
 
+                                    <a href="#" style="margin-top: 10px;" class="edit btn btn-ghost btn-ghost-white">MODIFICAR SOLICITUD</a>
+
                                     @*<a href="#" class="new btn btn-success btn-lg" style="margin-top: 10px;">Crear nueva solicitud</a>*@
                                     @*<a style="margin-top: 10px;" class="status btn btn-primary btn-lg">Ver el estatus de mi solicitud</a>*@
                                 </div>}
