--- a/ITLA_PE_MVC/Views/Solicitudes/Create.cshtml
+++ b/ITLA_PE_MVC/Views/Solicitudes/Create.cshtml
@@ -223,9 +223,9 @@
                                             <div class="row">
                                                 <div class="col-md-12">
                                                     <div class="form-group">
-                                                        <label for="userinput3">Record de notas<asp:RequiredFieldValidator ID="RequiredFieldValidator12" runat="server" Text="*" ForeColor="Red" ErrorMessage="Imagen de tu comprobante de estudio es requerido" ControlToValidate="FileUploadComprobante"></asp:RequiredFieldValidator></label>
+                                                        <label for="userinput3">Record de notas</label>
                                                         <div class="custom-file mb-3">
-                                                            <input type="file" id="PostFileEstudios" name="PostFileEstudios" class="custom-file-input" accept="image/jpeg,image/gif,image/png,application/pdf,image/x-eps" required />
+                                                            <input type="file" id="PostFileEstudios" name="PostFileEstudios" class="custom-file-input" accept="image/jpeg,image/gif,image/png,application/pdf,image/x-eps"  />
                                                             <label class="custom-file-label" for="validatedCustomFile">seleccionar archivo...</label>
                                                             @Html.ValidationMessageFor(model => model.FilePathEstudios, "", new { @class = "text-danger invalid-feedback" })
                                                         </div>
