--- a/ITLA_PE_MVC/Views/Intencion/Create.cshtml
+++ b/ITLA_PE_MVC/Views/Intencion/Create.cshtml
@@ -11,6 +11,11 @@
 {
     @Html.AntiForgeryToken()
 
+    <style>
+        .upper {
+            text-transform: uppercase;
+        }
+    </style>
     <div class="form-group">
         <div class="col-lg-12">
             <div class="card" style="min-height: 500px; padding: 10px;">
@@ -30,14 +35,14 @@
                                     <div class="col-md-4">
                                         <div class="form-group">
                                             <label for="userinput3">Nombres</label>
-                                            @Html.EditorFor(model => model.Intencion.Nombres, new { htmlAttributes = new { @class = "form-control is-invalid", required = "required" } })
+                                            @Html.EditorFor(model => model.Intencion.Nombres, new { htmlAttributes = new { @class = "form-control is-invalid upper", required = "required" } })
                                             @Html.ValidationMessageFor(model => model.Intencion.Nombres, "", new { @class = "text-danger" })
                                         </div>
                                     </div>
                                     <div class="col-md-4">
                                         <div class="form-group">
                                             <label for="userinput4">Apellidos</label>
-                                            @Html.EditorFor(model => model.Intencion.Apellidos, new { htmlAttributes = new { @class = "form-control is-invalid", required = "required" } })
+                                            @Html.EditorFor(model => model.Intencion.Apellidos, new { htmlAttributes = new { @class = "form-control is-invalid upper", required = "required" } })
                                             @Html.ValidationMessageFor(model => model.Intencion.Apellidos, "", new { @class = "text-danger" })
                                         </div>
                                     </div>
