Dashboard Intencion montado con parte de la DATA

--- a/ITLA_PE_MVC/Views/Home/Index.cshtml
+++ b/ITLA_PE_MVC/Views/Home/Index.cshtml
@@ -11,7 +11,7 @@
                                 <link href="~/Content/assets/css/custom.css" rel="stylesheet" />
                                 <div class="form-group" style="text-align: center; margin-top: 100px;">
                                     <h3>@ViewBag.Mensaje</h3>
-                                    <a href="#" style="margin-top: 10px;" class="new btn btn-ghost btn-ghost-white">NUEVA SOLICITUD</a>
+                                    <a href="/Solicitudes/Create" style="margin-top: 10px;" class="new btn btn-ghost btn-ghost-white">NUEVA SOLICITUD</a>
 
                                     <a href="#" style="margin-top: 10px;" class="status btn btn-ghost btn-ghost-white">VER EL ESTATUS</a>
 
