cambios menores a las solicitudes de intencion

--- a/ITLA_PE_MVC/Views/Intencion/Index.cshtml
+++ b/ITLA_PE_MVC/Views/Intencion/Index.cshtml
@@ -14,7 +14,7 @@
     <div class="form-group" style="text-align: center; margin-top: 100px;">
 
         <div class="form-group" style="text-align: center; margin-top: 100px;">
-            <a href="/Intencion/Create" style="margin-top: 10px;" class="btn btn-ghost btn-ghost-white">LLenar formulario de intención</a>
+            <a href="/Intencion/Create" style="margin-top: 10px;" class="btn newIntension btn-ghost btn-ghost-white">Completar formulario de intención</a>
         </div>
     </div>
 }
