--- a/ITLA_PE_MVC/Views/Intencion/Create.cshtml
+++ b/ITLA_PE_MVC/Views/Intencion/Create.cshtml
@@ -59,8 +59,8 @@
                                 <div class="row">
                                     <div class="col-md-12">
                                         <div class="form-group">
-                                            <label for="userinput1">Carrera</label>
-                                            @Html.DropDownListFor(model => model.Intencion.CarreraID, ViewBag._getCarreras as List<SelectListItem>, "Seleccione la carrera", htmlAttributes: new { @class = "form-control is-invalid", required = "required" })
+                                            <label for="userinput1">Seleccione el área de Interés</label>
+                                            @Html.DropDownListFor(model => model.Intencion.CarreraID, ViewBag._getCarreras as List<SelectListItem>, "Seleccione el área de Interés", htmlAttributes: new { @class = "form-control is-invalid", required = "required" })
                                             @Html.ValidationMessageFor(model => model.Intencion.CarreraID, "", new { @class = "text-danger" })
                                         </div>
                                     </div>
