--- a/ITLA_PE_MVC/Views/Home/Index.cshtml
+++ b/ITLA_PE_MVC/Views/Home/Index.cshtml
@@ -9,13 +9,24 @@
 <link href="~/Content/assets/css/styles-merged.css" rel="stylesheet" />
                 <link href="~/Content/assets/css/style.min.css" rel="stylesheet" />
                                 <link href="~/Content/assets/css/custom.css" rel="stylesheet" />
+                              
                                 <div class="form-group" style="text-align: center; margin-top: 100px;">
+                                    <p style="font-weight: bold; color: white; margin-left: 20px; margin-right: 20px;">
+                                        Estimado solicitante:
+                                        <br /><br />
+                                        El plazo hábil para la solicitud de becas Puntos Tecnológicos ha finalizado.
+                                        <br />
+                                        Puedes aplicar en la segunda etapa del proyecto, que anunciaremos a partir de enero 2021.
+                                        <br />
+                                        ¡Gracias por tu interés en desarrollar tu talento y transformar tu vida a través de la educación!
+                                    </p>
+
                                     <h3>@ViewBag.Mensaje</h3>
-                                    <a href="/Solicitudes/Create" style="margin-top: 10px;" class="new btn btn-ghost btn-ghost-white">NUEVA SOLICITUD</a>
+                                    @*<a href="/Solicitudes/Create" style="margin-top: 10px;" class="new btn btn-ghost btn-ghost-white">NUEVA SOLICITUD</a>*@
 
                                     <a href="#" style="margin-top: 10px;" class="status btn btn-ghost btn-ghost-white">VER EL ESTATUS</a>
 
-                                    <a href="#" style="margin-top: 10px;" class="edit btn btn-ghost btn-ghost-white">MODIFICAR SOLICITUD</a>
+                                    @*<a href="#" style="margin-top: 10px;" class="edit btn btn-ghost btn-ghost-white">MODIFICAR SOLICITUD</a>*@
 
                                     @*<a href="#" class="new btn btn-success btn-lg" style="margin-top: 10px;">Crear nueva solicitud</a>*@
                                     @*<a style="margin-top: 10px;" class="status btn btn-primary btn-lg">Ver el estatus de mi solicitud</a>*@
