--- a/ITLA_PE_PORTALADMIN/SiteMain.Master
+++ b/ITLA_PE_PORTALADMIN/SiteMain.Master
@@ -158,7 +158,7 @@
                                 <span data-i18n="nav.dash.main">Pre-Validación Juventud</span>
                             </a>
                         </li>
-                      <%--  <li class="dropdown nav-item btn-top-menu" data-menu="dropdown">
+                       <li class="dropdown nav-item btn-top-menu" data-menu="dropdown">
                             <a class="dropdown-toggle nav-link" href="index.html" data-toggle="dropdown">
                                 <i class="icon-badge"></i>
                                 <span data-i18n="nav.dash.main">Proyecto Especial</span>
@@ -180,7 +180,7 @@
                                 </li>
 
                             </ul>
-                        </li>--%>
+                        </li>
                         <li class="dropdown nav-item btn-top-menu" data-menu="dropdown">
                             <a class="dropdown-toggle nav-link" href="index.html" data-toggle="dropdown">
                                 <i class="icon-settings"></i>
