--- a/ITLA_PE_PORTALADMIN/SiteMain.Master
+++ b/ITLA_PE_PORTALADMIN/SiteMain.Master
@@ -146,7 +146,7 @@
                                 <span data-i18n="nav.dash.main">Dashboard Juventud</span>
                             </a>
                         </li>
-                           <li class="dropdown nav-item btn-top-menu active" >
+                           <li class="dropdown nav-item btn-top-menu" >
                             <a class="dropdown-toggle nav-link" href="/DashboardIntencion.aspx">
                                 <i class="icon-chart"></i>
                                 <span data-i18n="nav.dash.main">Dashboard Intencion</span>
@@ -158,7 +158,7 @@
                                 <span data-i18n="nav.dash.main">Pre-Validación Juventud</span>
                             </a>
                         </li>
-                       <li class="dropdown nav-item btn-top-menu" data-menu="dropdown">
+                      <%-- <li class="dropdown nav-item btn-top-menu" data-menu="dropdown">
                             <a class="dropdown-toggle nav-link" href="index.html" data-toggle="dropdown">
                                 <i class="icon-badge"></i>
                                 <span data-i18n="nav.dash.main">Proyecto Especial</span>
@@ -180,8 +180,8 @@
                                 </li>
 
                             </ul>
-                        </li>
-                        <li class="dropdown nav-item btn-top-menu" data-menu="dropdown">
+                        </li>--%>
+                   <%--     <li class="dropdown nav-item btn-top-menu" data-menu="dropdown">
                             <a class="dropdown-toggle nav-link" href="index.html" data-toggle="dropdown">
                                 <i class="icon-settings"></i>
                                 <span data-i18n="nav.dash.main">Configuración</span>
@@ -197,7 +197,7 @@
                                     <a class="dropdown-item" href="dashboard-fitness.html" data-toggle="dropdown">Option 3</a>
                                 </li>
                             </ul>
-                        </li>
+                        </li>--%>
                          <li class="dropdown nav-item btn-top-menu">
                             <a class="dropdown-toggle nav-link" href="/ClearSession.aspx">
                                 <i class="icon-close"></i>
